# bevy_serialization_urdf

./: Cargo.toml  LICENSE  README.md
assets/model_pkg/urdf/: diff_bot.xml
examples/: sample_robot_load.rs
src/: lib.rs  plugin.rs  resources.rs  ui.rs
src/loaders/: mod.rs  urdf_loader.rs
src/wrappers/: material_and_mesh.rs  mod.rs  urdf.rs
