[package]
name = "bevy_serialization_urdf"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
readme = "README.md"
license = "MIT"
description = "An addon for bevy_serialization_extras for loading urdfs"


[dependencies]
bevy_serialization_extras = {path = "../bevy_serialization_extras", version = "0.3.1"}
bevy = "0.12"

glam = "0.25"
moonshine-save = "0.3.4"
bevy_egui = "0.24"
egui = "0.24"
egui_extras = "0.24"
urdf-rs = "0.8.0"
#multimap = "0.9.1"
strum = "0.26"
strum_macros = "0.26"
bitflags = "2.4.1"
nalgebra = "0.32"
yaserde = "0.9"
derive_more = "0.99"
bitvec = "1.0"
#bevy_obj = "0.12"
log = "0.4.2"

[dev-dependencies]
bevy = {version = "0.12", features = ["dynamic_linking"]}
bevy_mod_raycast = "0.16"

bevy_ui_extras = "0.4.1"
bevy-inspector-egui = "0.22.0"
bevy_camera_extras = "0.1.6"
ron = "0.8"
bevy_rapier3d = "0.23"
rapier3d = "0.17.2"
