[package]
name = "bevy_serialization_urdf"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/rydb/bevy_serialization_extras"
readme = "README.md"
license = "MIT"
description = "An addon for bevy_serialization_extras for loading urdfs"


[dependencies]
bevy_serialization_extras = "0.7"

bevy_utils = "0.14"
bevy_ecs = "0.14"
bevy_color = "0.14"
bevy_reflect = "0.14"
bevy_asset = "0.14"
bevy_app = "0.14"
bevy_render = "0.14"
bevy_math = "0.14"
bevy_core = "0.14"
bevy_transform = "0.14"
bevy_window = "0.14"
bevy_state = "0.14"

thiserror = "1.0"
glam = "0.27"

urdf-rs = "0.8.0"
strum = "0.26"
strum_macros = "0.26"
bitflags = "2.4.1"
nalgebra = "0.33"
yaserde = "0.10"
derive_more = {version = "1.0", features = ["from"]}
bitvec = "1.0"


[dev-dependencies]
bevy = {version = "0.14", features = ["dynamic_linking"]}
moonshine-save = "0.3.4"
bevy_mod_raycast = "0.18"
bevy_ui_extras = "0.15"
bevy_camera_extras = "0.14"
ron = "0.8"
bevy_rapier3d = "0.27"
rapier3d = "0.22"
bevy_egui = "0.30"
egui = "0.29"
egui_extras = "0.29"
